<resources>
    <string name="appName">haine</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_repeat">Confirm password</string>
    <string name="email">Email</string>
    <string name="logIn">Log in</string>
    <string name="register">Register</string>
    <string name="restore">Restore</string>
    <string name="registerHint">Do not have an account?</string>
    <string name="restoreHint">Forgot credentials?</string>
    <string name="logInHint">Already have an account</string>

    <string name="dialogs">Dialogs</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="write_message">Write message</string>
    <string name="photo_hint">Profile photo URL</string>
    <string name="stickers">Stickers</string>
    <string name="account_settings">Account</string>
    <string name="logOut">Log out</string>
    <string name="logOutHint">All data will be reset</string>
    <string name="loggingOut">Logging out...</string>
    <string name="exchange_hint">Performing exchange. Waiting for the interlocutor</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="key_exchange">New key exchange</string>
    <string name="fingerprint_hint">This image and this text were generated from the encryption key. If they look the same on your interlocutor\'s device, be sure that no one breaks your privacy. Otherwise your conversation is not secure!</string>
    <string name="no_shared">Key exchange hasn\'t been performed yet</string>
    <string name="really_wanna_exchange">Do you really want to perform new key exchange?</string>
    <string name="user_not_found">User not found</string>
    <string name="file_downloaded">File %s has been downloaded</string>
    <string name="permissions_info">App needs an access to your files for sending and saving them</string>
    <string name="about_app">About</string>
    <string name="version">version %1$s from %2$s</string>
    <string name="wanna_log_out">Do you really want to log out?</string>
    <string name="hidden_content">Content hidden</string>
    <string name="notifications">Notifications</string>
    <string name="show_notifications">Show notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="play_ringtone">Play ringtone</string>
    <string name="downloading_disclaimer">If you open this file now, it will become unavailable for other user. Continue?</string>
    <string name="sticker_format_hint">Sticker must be not larger than 512x512</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_repeat">New password confirmation</string>
    <string name="change_password">Change password</string>
    <string name="restored">Follow the instructions that are sent on your email</string>
    <string name="password_changed">Your password has been successfully changed!</string>
    <string name="choose_from_gallery">Change</string>
    <string name="remove_avatar">Remove</string>
    <string name="avatar_settings">Avatar settings</string>
</resources>
