<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/haine_minimal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textLight"
                android:hint="@string/name"
                android:maxLength="30"
                android:textColor="@color/textLight"
                android:textColorHint="@color/textLightSecondary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textLight"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="24dp"
                android:textColor="@color/textLight"
                android:textColorHint="@color/textLightSecondary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textLight"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:paddingEnd="24dp"
                android:textColor="@color/textLight"
                android:textColorHint="@color/textLightSecondary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textLight"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textLight"
                android:textColorHint="@color/textLightSecondary" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/selector_button_background"
            android:text="@string/logIn"
            android:textColor="@color/textLight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRegisterHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/registerHint"
            android:textColor="@color/textLight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvLogInHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/logInHint"
            android:textColor="@color/textLight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRestoreHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/restoreHint"
            android:textColor="@color/textLight"
            android:textSize="15sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
