<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/llAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/account_settings"
                    android:textColor="@color/textLightSecondary"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/ivClearPhoto">

                        <EditText
                            android:id="@+id/etPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#fff"
                            android:hint="@string/photo_hint"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/textLight"
                            android:textColorHint="@color/textLightSecondary" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/ivClearPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_close" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnLogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/selector_button_background"
                        android:text="@string/logOut"
                        android:textColor="@color/textLight" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="18dp"
                        android:layout_toLeftOf="@+id/btnLogOut"
                        android:text="@string/logOutHint"
                        android:textColor="@color/textLightSecondary" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/llAccount"
                android:background="@color/textDarkSecondary" />

            <LinearLayout
                android:id="@+id/llNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAccount"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/notifications"
                    android:textColor="@color/textLightSecondary"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/swShowNotifications"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_notifications"
                    android:textColor="@color/textLight" />

                <Switch
                    android:id="@+id/swVibrate"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate"
                    android:textColor="@color/textLight" />

                <Switch
                    android:id="@+id/swPlayRingtone"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_ringtone"
                    android:textColor="@color/textLight" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/llNotifications"
                android:background="@color/textDarkSecondary" />

            <LinearLayout
                android:id="@+id/llAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNotifications"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/about_app"
                    android:textColor="@color/textLightSecondary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivHaine"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    android:src="@mipmap/haine_minimal" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/version"
                    android:textColor="@color/textLightSecondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/llAbout"
                android:background="@color/textDarkSecondary" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>